--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.6.0",
     "expo": "~41.0.0",
+    "expo-constants": "^10.1.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
+    "react-devtools": "^4.12.2",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
